--- a/css/main.css
+++ b/css/main.css
@@ -320,7 +320,7 @@ body.overflow {
     left: -130px;
     z-index: -1;
     animation-name: s_cloudAnime;
-    animation-duration: 10s;
+    animation-duration: 15s;
     animation-direction: alternate-reverse;
     animation-iteration-count: infinite; }
   .casino_list_fluid .casino_list_right_anime {
@@ -333,7 +333,7 @@ body.overflow {
     right: -22%;
     z-index: -1;
     animation-name: b_cloudAnime;
-    animation-duration: 9s;
+    animation-duration: 14s;
     animation-direction: alternate-reverse;
     animation-iteration-count: infinite; }
 
@@ -360,12 +360,12 @@ body.overflow {
     background: #fff;
     align-items: center;
     margin-bottom: 20px;
-    transition: all .5s; }
+    transition: all .4s !important; }
     .casino_list_container .casino_list_item .rev_stars {
       display: flex;
       justify-content: center; }
     .casino_list_container .casino_list_item:hover {
-      box-shadow: 0 0 13px 5px #00000029; }
+      box-shadow: 0 0 15px 2px #00000021; }
       .casino_list_container .casino_list_item:hover .casino_list_logo img {
         transform: scale(1.2); }
   .casino_list_container .casino_list_logo {
@@ -527,7 +527,7 @@ body.overflow {
   .casino_slider_fluid .casino_list_item {
     padding: 15px 0; }
     .casino_slider_fluid .casino_list_item .casino_list_center {
-      margin: 0 50px 0 20px; }
+      margin: 0 15px 0 15px; }
     .casino_slider_fluid .casino_list_item .casino_list_flags {
       display: flex;
       flex-direction: column; }
@@ -552,7 +552,7 @@ body.overflow {
       padding: 20px;
       transition: all .3s; }
       .casino_slider_fluid .casino_list_item .casino_body_wrapper:hover {
-        box-shadow: 0px 0px 13px 2px #00000036; }
+        box-shadow: 0px 0px 13px 1px #0000001c; }
       .casino_slider_fluid .casino_list_item .casino_body_wrapper .casino_list_item_title {
         font-size: 28px;
         color: #2C3E50;
@@ -627,7 +627,7 @@ body.overflow {
 .link_tabs_container {
   display: flex;
   flex-wrap: wrap;
-  padding: 30px 10px 70px; }
+  padding: 30px 10px 50px; }
   .link_tabs_container a {
     margin-right: 10px;
     background-color: #fff;
@@ -674,7 +674,8 @@ footer {
     font-size: 16px;
     font-family: "Roboto";
     position: relative;
-    margin-left: 10px; }
+    margin-left: 10px;
+    white-space: nowrap; }
     footer .footer_nav nav ul li a:after {
       content: "";
       position: absolute;
@@ -1001,7 +1002,7 @@ footer {
     position: relative; }
     .blog_header_info_fluid .blog_header_info * {
       color: #2C3E50;
-      opacity: 0.7;
+      opacity: 1;
       font-family: "Roboto"; }
     .blog_header_info_fluid .blog_header_info svg {
       margin-right: 5px; }
@@ -1040,7 +1041,7 @@ footer {
 
 .blog_inner_header {
   height: 315px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/bloginner.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.66), rgba(0, 0, 0, 0.66)), url("../images/bloginner.jpg");
   background-size: cover;
   background-position: center; }
   .blog_inner_header:before {
@@ -1605,8 +1606,8 @@ textarea {
         .casino_inner_body .body_left .payment_method_container .logo_container img {
           flex: 0 0 15%;
           max-width: 15%;
-          height: 57px;
-          margin-right: 1%;
+          height: 46px;
+          margin-right: 2%;
           object-fit: contain; }
       .casino_inner_body .body_left .payment_method_container .payment_header {
         display: flex;
@@ -1775,7 +1776,7 @@ textarea {
   .lists_fluid .list_container {
     border-radius: 13px;
     padding: 20px 30px 25px 38px;
-    margin-right: 1%; }
+    margin-right: 16px; }
     .lists_fluid .list_container.green {
       background-color: #E8F5E9;
       border: 1px solid #1B5E20; }
@@ -2735,5 +2736,14 @@ textarea {
 .casino_right_tab:hover .rainbow span:last-child {
   background: #5642EC;
   transform: translate(-50%, -50%) scale(3); }
+
+.common_banner {
+  width: 100%;
+  border-radius: 5px;
+  overflow: hidden; }
+  .common_banner img {
+    width: 100%;
+    object-fit: cover;
+    max-height: 400px; }
 
 /*# sourceMappingURL=main.css.map */
