--- a/css/main.css
+++ b/css/main.css
@@ -258,11 +258,15 @@ body.overflow {
           line-height: 15px; }
         .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_title_cont {
           display: flex;
-          align-items: center; }
-          .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_title_cont svg {
-            width: 35px;
-            height: 35px;
-            object-fit: contain; }
+          align-items: center;
+          justify-content: center;
+          max-width: 55%;
+          max-height: 45%; }
+          .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_title_cont img, .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_title_cont svg {
+            object-fit: contain;
+            max-width: 100%;
+            max-height: 100%;
+            border-radius: 10px; }
           .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_title_cont .item_title {
             text-align: center; }
             .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_title_cont .item_title span:first-child {
@@ -284,7 +288,7 @@ body.overflow {
   background-color: #fff;
   position: absolute;
   top: -2px;
-  right: -27px;
+  right: -32px;
   display: flex;
   align-items: center;
   justify-content: center;
