--- a/sass/main.scss
+++ b/sass/main.scss
@@ -211,10 +211,11 @@ body.overflow {
 .home_slider_fluid {
 	position: relative;
 	padding: 5px 5px 16px 7px;
+	width: 100%;
 	 &:after{
     	position:absolute;
     	content: "";
-    	bottom: 0;
+    	bottom: 3px;
     	left: 0;
     	z-index: 10;
     	width: 100%;
@@ -233,9 +234,10 @@ body.overflow {
      }
 
      .casino_text {
-    padding: 0 36px;
+    padding: 0 27px;
     text-align: center;
     margin: 12px 0;
+    min-height: 73px;
      	* {
 
      	color: #2C3E50;
@@ -247,7 +249,7 @@ body.overflow {
 
 .main_section {
 	width: 100%;
-	height: 635px;
+	height: 700px;
 	overflow: hidden;
 	background-image: linear-gradient(to right ,#E2DFFF,#988CFE);
 	position: relative;
@@ -2168,7 +2170,7 @@ textarea {
   font-size: 18px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   margin: 0px;
   transition: all 0.3s ease;
   /*opacity: 0.3;*/
@@ -3842,6 +3844,7 @@ font-size: 14px;
 
 	.home_slider_fluid .casino_text {
 		padding: 0 23px;
+		min-height: unset;
 	}
 
 
