--- a/css/main.css
+++ b/css/main.css
@@ -230,18 +230,28 @@ body.overflow {
         flex-direction: column;
         position: relative;
         border: 10px solid #fff;
-        position: relative; }
-        .main_section .home_slider .home_slider_item .home_slide_item_wrapper:after {
-          content: "";
-          width: 140px;
-          height: 140px;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          z-index: 1;
-          border: 1px solid #E5E5E5;
-          border-radius: 50%;
-          transform: translate(-50%, -50%); }
+        position: relative;
+        /*
+        		    &:after {
+        		    	content:"";
+        		    	width: 140px;
+        		    	height: 140px;
+        		    	position: absolute;
+        		    	top: 50%;
+        		    	left: 50%;
+        		    	z-index: 1;
+        		    	border: 1px solid #E5E5E5;
+        		    	border-radius: 50%;
+        		    	transform: translate(-50%,-50%);
+        		    }*/ }
+        .main_section .home_slider .home_slider_item .home_slide_item_wrapper a {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 100%;
+          width: 100%;
+          overflow: hidden;
+          border-radius: 50%; }
         .main_section .home_slider .home_slider_item .home_slide_item_wrapper .casino_list_button {
           position: absolute;
           bottom: 0; }
@@ -262,13 +272,13 @@ body.overflow {
           display: flex;
           align-items: center;
           justify-content: center;
-          max-width: 55%;
-          max-height: 45%; }
+          max-width: 100%;
+          max-height: 100%; }
           .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_title_cont img, .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_title_cont svg {
             object-fit: contain;
-            max-width: 100%;
-            max-height: 100%;
-            border-radius: 10px; }
+            max-width: 80%;
+            max-height: 80%;
+            /*border-radius: 10px;*/ }
           .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_title_cont .item_title {
             text-align: center; }
             .main_section .home_slider .home_slider_item .home_slide_item_wrapper .item_title_cont .item_title span:first-child {
