--- a/sass/main.scss
+++ b/sass/main.scss
@@ -333,6 +333,17 @@ body.overflow {
 		    border: 10px solid #fff;
 		    position: relative;
 
+		    a {
+		    display: flex;
+		    align-items: center;
+		    justify-content: center;
+		    height: 100%;
+		    width: 100%;
+		    overflow: hidden;
+		    border-radius: 50%;
+
+		    }
+/*
 		    &:after {
 		    	content:"";
 		    	width: 140px;
@@ -344,7 +355,7 @@ body.overflow {
 		    	border: 1px solid #E5E5E5;
 		    	border-radius: 50%;
 		    	transform: translate(-50%,-50%);
-		    }
+		    }*/
 
 
  
@@ -376,14 +387,14 @@ body.overflow {
 				display: flex;
 			    align-items: center;
 			    justify-content: center;
-			    max-width: 55%;
-   				 max-height: 45%;
+			    max-width: 100%;
+   				 max-height: 100%;
 
 			    img,svg {
 			        object-fit: contain;
-				    max-width: 100%;
-				    max-height: 100%;
-				    border-radius: 10px;
+				    max-width: 80%;
+				    max-height: 80%;
+				    /*border-radius: 10px;*/
 			    }
 				
 				
