--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,9 @@ body.overflow {
   text-align: center;
   margin-bottom: 10px; }
 
+.main_logo {
+  padding-left: 30px; }
+
 .home_slider_fluid {
   position: relative;
   padding: 5px 5px 16px 7px;
@@ -468,7 +471,8 @@ body.overflow {
     color: #2C3E50; }
   .casino_list_info .bold_title {
     font-size: 32px;
-    font-weight: bold; }
+    font-weight: bold;
+    font-family: 'Kanit'; }
 
 .casino_list_links .star_review {
   text-align: center;
@@ -1560,7 +1564,7 @@ textarea {
   .casino_inner_header .casino_inner_main_logo {
     width: 230px;
     height: 230px;
-    border: 30px solid #fff;
+    border: 20px solid #fff;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -1962,6 +1966,9 @@ textarea {
   .games_fluid {
     margin-top: 50px; } }
 @media screen and (max-width: 992px) {
+  .main_logo {
+    padding-left: 20px; }
+
   .main_section .home_slider {
     max-width: 90%;
     margin: 0 auto; }
@@ -2465,8 +2472,11 @@ textarea {
   .header .header_right .language_bar .language_title {
     display: flex; }
 
+  .long_text_paragraph h1 {
+    line-height: 1.2; }
+
   .main_section .main_section_header {
-    max-width: 720px;
+    max-width: 770px;
     margin: 35px auto 25px;
     text-align: center; }
 
