--- a/css/main.css
+++ b/css/main.css
@@ -233,20 +233,7 @@ body.overflow {
         flex-direction: column;
         position: relative;
         border: 10px solid #fff;
-        position: relative;
-        /*
-        		    &:after {
-        		    	content:"";
-        		    	width: 140px;
-        		    	height: 140px;
-        		    	position: absolute;
-        		    	top: 50%;
-        		    	left: 50%;
-        		    	z-index: 1;
-        		    	border: 1px solid #E5E5E5;
-        		    	border-radius: 50%;
-        		    	transform: translate(-50%,-50%);
-        		    }*/ }
+        position: relative; }
         .main_section .home_slider .home_slider_item .home_slide_item_wrapper a {
           display: flex;
           align-items: center;
@@ -255,6 +242,23 @@ body.overflow {
           width: 100%;
           overflow: hidden;
           border-radius: 50%; }
+        .main_section .home_slider .home_slider_item .home_slide_item_wrapper:after {
+          content: "";
+          width: 140px;
+          height: 140px;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          z-index: 1;
+          border: 1px solid #E5E5E5;
+          border-radius: 50%;
+          transform: translate(-50%, -50%);
+          transition: all .3s;
+          opacity: 1; }
+        .main_section .home_slider .home_slider_item .home_slide_item_wrapper:hover:after {
+          display: none;
+          /*opacity: 0;*/
+          /*visibility: hidden;*/ }
         .main_section .home_slider .home_slider_item .home_slide_item_wrapper .casino_list_button {
           position: absolute;
           bottom: 0; }
