--- a/sass/main.scss
+++ b/sass/main.scss
@@ -345,7 +345,7 @@ body.overflow {
 		    border-radius: 50%;
 
 		    }
-/*
+
 		    &:after {
 		    	content:"";
 		    	width: 140px;
@@ -357,8 +357,16 @@ body.overflow {
 		    	border: 1px solid #E5E5E5;
 		    	border-radius: 50%;
 		    	transform: translate(-50%,-50%);
-		    }*/
+		    	transition: all .3s;
+		    	opacity: 1;
+		    }
 
+
+		    &:hover:after {
+		    	display: none;
+		    	/*opacity: 0;*/
+		    	/*visibility: hidden;*/
+		    }
 
  
 
